force-app/main/default/objects/inov8__PMT_Resource_Availability__c/fields/inov8__Resource_Name_FY__c.field-meta.xml
<CustomField>
    <fullName>inov8__Resource_Name_FY__c</fullName>
    <formula>IF(inov8__is_Dummy_Availability__c, &apos;Unallocated&apos;, inov8__User_Name__c) + &apos; - &apos;&amp; inov8__Fiscal_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Name &amp; FY</label>
    <type>Text</type>
</CustomField>