force-app/main/default/objects/inov8__PMT_Resource_Availability__c/fields/inov8__User_Name__c.field-meta.xml
<CustomField>
    <fullName>inov8__User_Name__c</fullName>
    <formula>IF(inov8__is_Dummy_Availability__c,&apos;&apos;, inov8__User__r.FirstName + &apos; &apos; +  inov8__User__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Name</label>
    <type>Text</type>
</CustomField>